--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -5,8 +5,8 @@
 @import "themes_show";
 @import "dashboard";
 
-@import "articles_index"
+@import "articles_index";
 
 @import "themes_new";
-@import "themes_edit"
+@import "themes_edit";
 
