user edit dashboard dashboard css topics index fixed

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1 class="forumtitle"> Kaabo Forum </h1>
 
-<div class="log d-flex justify-content-center">
+<div class="logo d-flex justify-content-center">
 <%= image_tag "https://res.cloudinary.com/cassarola/image/upload/v1599155458/Design_sem_nome-removebg-preview1_rznueg.png" %>
 </div>
     <div class="d-inline-flex p-2">
