--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -5,16 +5,34 @@ h5 {
 
 }
 
-p {
-  font-weight: 200;
-  font-size: initial;
+.my-prof-dash {
+  width: 100%;
+  padding:15px;
+  margin-bottom: 30px;
+  text-align: center;
+
 }
 
+.title-dash {
+    background-color: #FDDB3A;
+    padding: 10px;
+    margin: 0;
+    border-radius: 3px;
+    margin-top: 30px;
+}
 
 .card-wraper {
   background-color: #F6F4E6;
-  margin-left: 50px;
-  border-radius: 3px;
+  //margin-left: 50px;
+  border-radius: 5px;
+}
+
+.card-body {
+  margin-bottom: 15px;
+  margin-top: 15px;
+  border-style: solid;
+  border-color: #F6F4E6;
+  border-radius: 5px;
 }
 
 .index-link {
@@ -28,11 +46,38 @@ p {
   margin-left: 58px;
 }
 
-.logo {
-  margin: 0 auto;
-  width: 491px;
-}
 
 .head {
   text-align: center;
+}
+
+.edit-profile {
+  text-align: center;
+  margin-top:15px;
+
+  a {
+  color: #52575d;
+  text-decoration: underline;
+
+  }
+}
+
+.link-profile a {
+  color: #52575d;
+  text-decoration: underline;
+  margin-top: 15px;
+
+
+}
+
+.pic-dash img {
+  border-radius: 15px;
+}
+
+
+
+@media (max-width: 768px) {
+ .logo-dash img {
+   max-width: 150px;
+ }
 }
