--- a/app/views/comments/dashboard.html.erb
+++ b/app/views/comments/dashboard.html.erb
@@ -1,27 +1,35 @@
 <div class="container">
   <div class="head">
-    <h1>Hi,</h1>
-    <%= @current_user.username %>
+    <div> <h3>Hi <%= @current_user.username %>! </h3>
+      <div> <h5> Welcome to your profile </h5> </div>
+      </div>
+
+
   </div>
 
-  <div class="logo ">
+  <!-- <div class="logo-dash d-flex justify-content-center">
   <%= image_tag "https://res.cloudinary.com/cassarola/image/upload/v1599155458/Design_sem_nome-removebg-preview1_rznueg.png" %>
-  </div>
+  </div> -->
 
-  <h5>My profile</h5>
-  <% if @current_user.username.present? && @current_user.photo.present? %>
-  <p> My username: <%= @current_user.username %></p>
-  <p> My avatar: <%= cl_image_tag current_user.photo.key, height: 150, width: 200, crop: :fill %></p>
-  <%= link_to "Edit profile", edit_user_path(@current_user), class: "edit-text" %>
+  <div class="my-prof-dash">
+  <!-- <div> <h5>My profile</h5> </div> -->
+  <div> <% if @current_user.username.present? && @current_user.photo.present? %> </div>
+  <!-- <div>  <%= @current_user.username %></div> -->
+  <div class="pic-dash">  <%= cl_image_tag current_user.photo.key, height: 150, width: 200, crop: :fill %></div>
+  <div class="edit-profile"> <%= link_to "Edit profile", edit_user_path(@current_user) %> </div>
   <% else %>
-  <p> You don't have a username or avatar, click "Complete profile" to create one!</p>
-  <%= link_to "Complete profile", edit_user_path(@current_user) %>
+   You don't have a username or avatar, click below to create one!
+   <div class="link-profile"><%= link_to "Complete profile", edit_user_path(@current_user) %> </div>
   <% end %>
+   </div>
 
 
 
 
-<h4 class="title">My Bookmarks</h4>
+
+
+
+<h4 class="title-dash">My Bookmarks</h4>
 <div class="card-wraper">
 <div class="card-body">
   <% @my_bookmarks.each do |bookmark|%>
@@ -38,7 +46,7 @@
 </div>
 
 
-<h4 class="title">My threads</h4>
+<h4 class="title-dash">My threads</h4>
 <div class="card-wraper">
     <div class="card-body">
     <% @my_themes.each do |theme|%>
@@ -59,7 +67,7 @@
 
 
 
-<h4 class="title">My comments</h4>
+<h4 class="title-dash">My comments</h4>
 <div class="card-wraper">
 <div class="card-body">
   <% @my_comments.each do |comment|%>
