article pagination working

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,6 +12,11 @@
     <% end %>
   <% end %>
   </div>
+  <div class="container">
+    <div class="row">
+      <%= paginate @articles %>
+    </div>
+  </div>
 </div>
 
 
