--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,28 @@
-<div class="container_show">
-  <div id="content-wrap">
-    <h1><%= @article.title %></h1>
-
-    <h4><%= @article.date %></h4>
-    <p><%= @article.content %></p>
-    <%= social_share_button_tag(@article.title) %>
+ <% if current_user.admin %>
+  <div class="container_show">
+    <div id="content-wrap">
+      <h1><%= @article.title %></h1>
+      <h4><%= @article.date %></h4>
+      <p><%= @article.content %></p>
+      <%= social_share_button_tag(@article.title) %>
+      <div class="btn-flat-inv"> Go back to <%= link_to @article.topic.category, topic_articles_path %> </div>
+      <%= link_to "Edit", edit_topic_article_path(@article.topic, @article) %>
+      <%= link_to "Delete",
+            topic_article_path(@article.topic, @article),
+            method: :delete,
+            data: { confirm: "Are you sure?" } %>
+    </div>
   </div>
-</div>
+<% else %>
+  <div class="container_show">
+    <div id="content-wrap">
+      <h1><%= @article.title %></h1>
+      <h4><%= @article.date %></h4>
+      <p><%= @article.content %></p>
+      <%= social_share_button_tag(@article.title) %>
+      <div class="btn-flat-inv"> Go back to <%= link_to @article.topic.category, topic_articles_path %> </div>
+    </div>
+  </div>
+<% end %>
 
 
