--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
             </div>
 
            <div class="container">
-             <div class="d-inline-flex p-2"><h4 class="title"><strong>Useful Information</strong></h4></div>
+             <div class="d-inline-flex p-2" id="info"><h4 class="title"><strong>Useful Information</strong></h4></div>
       <div class="row">
 
           <% @topics.each do |topic| %>
