--- a/app/assets/stylesheets/pages/_themes_show.scss
+++ b/app/assets/stylesheets/pages/_themes_show.scss
@@ -5,6 +5,12 @@
   border-radius: 5px;
 }
 
+.theme-card-show-main {
+  background: #F6F4E6;
+  padding: 5px;
+  margin: 5px;
+  border-radius: 5px;
+}
 
 #link-color-size a {
   text-decoration: none;
