--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,24 +2,33 @@
       <%= form_tag topic_articles_path, method: :get do %>
       <%= text_field_tag :query, params[:query], placeholder:"keyword", class: 'search-input pr-0 mr-0', style: "width:50%"%><%= submit_tag 'search', class: 'search-btn'%>
       <% end %>
-  </div>
+ </div>
 
 <%= link_to "Create a new article", new_topic_article_path %>
 
-<% @articles.each do |article| %>
-    <% if article.image_url.nil? %>
-    <%= image_tag "https://source.unsplash.com/500x400/?#{article.topic.category}"  %>
-    <% else %>
-    <%= image_tag article.image_url, size: "500x400" %>
-    <% end %>
-    <h1><%= article.title %></h1>
-    <p> <%= article.date %></p>
-    <%= link_to "read more", topic_article_path(article.topic,article) %>
-<% end %>
 
-<div class="container">
-  <div class="row">
-  <%= paginate @articles %>
+<div class="index-page-container col-10">
+  <div class="articles">
+  <% @articles.each do |article| %>
+    <%= link_to topic_article_path(@topic,article) do  %>
+    <div class="cards-article row">
+          <% if article.image_url.nil? %>
+            <div class="card-category col-6" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= 'https://source.unsplash.com/500x400/?#{article.topic.category}' %>)"></div>
+          <% else %>
+            <div class="card-category col-6" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= url_for (article.image_url) %>)"></div>
+          <% end %>
+        <div class="card-info col-4">
+          <h4 class="m-0 p-1"><%= article.title %></h4>
+          <p class="m-0 p-1"><%= article.date %></p>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
+  </div>
+  <div class="container">
+    <div class="row">
+      <%= paginate @articles %>
+    </div>
   </div>
 </div>
 
