--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,8 +10,8 @@
   background-color: #FDDB3A;
   padding: 10px;
   margin-left: 50px;
-  margin-bottom: 25px;
-  margin-top: 20px;
+  margin-bottom: 4px;;
+  margin-top: 16px;
   border-radius: 3px;
 }
 
@@ -69,6 +69,15 @@ h5 {
 
 h4 {
   margin-left: 55px;
+}
+
+.title-information {
+  background-color: #FDDB3A;
+  padding: 10px;
+  margin-left: 50px;
+  margin-bottom: 26px;;
+  margin-top: 16px;
+  border-radius: 3px;
 }
 
 
