--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,7 +25,7 @@
             </div>
 
            <div class="container">
-             <div class="d-inline-flex p-2"><h4 class="title"><strong>Useful Information</strong></h4></div>
+             <div class="d-inline-flex p-2"><h4 class="title-information"><strong>Useful Information</strong></h4></div>
       <div class="row">
 
           <% @topics.each do |topic| %>
@@ -38,7 +38,6 @@
                     <div class="links">
                       <p><%= link_to "#{topic.category}", topic_articles_path(topic) %></p>
                     </div>
-
 
                   </div>
                 <% end %>
