--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,4 +1,4 @@
-<div >
+<div class="container" >
   <div>
       <%= simple_form_for([@theme, @comment]) do |f| %>
       <%= f.input :content, as: :text %>
