--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -1,23 +1,32 @@
 <div class="container">
 
-<h1> <%= @theme.title %> </h1>
-<div data-type= '<%= @theme.content%>' class="theme-card-show-main">
-  <div class="d-flex justify-content-between">
-    <%= @theme.content%>
-    <div>by <%= @theme.user.username %></div>
-    <div><%= @theme.date %></div>
+
+
+<div class="form-inline d-flex" style="width:100%">
+    <div><%= form_tag topic_theme_path, method: :get do %> </div>
+      <div class="search-box"> <%= text_field_tag :query, params[:query], placeholder:"keyword", class: 'search-input pr-0 mr-0', style: "width:60%"%>
+         <%= submit_tag 'search', class: 'search-btn'%> </div>
+          <% end %>
+ </div>
+
+
+<div class="new-card-show">
+  <h4 class="theme-cat"> <%= @theme.title %> </h4>
+  <div data-type= '<%= @theme.content%>'>
+      <%= @theme.content%>
   </div>
+  <br>
+      <div class="d-flex justify-content-between">
+      <div> by <%= @theme.user.username %></div>
+      <div><%= @theme.date %></div>
+    </div>
+
 </div>
 
 
 
 
-<div class="form-inline d-flex" style="width:100%">
-          <div><%= form_tag topic_theme_path, method: :get do %> </div>
-           <div class="search-box"> <%= text_field_tag :query, params[:query], placeholder:"keyword", class: 'search-input pr-0 mr-0', style: "width:60%"%>
-            <%= submit_tag 'search', class: 'search-btn'%> </div>
-          <% end %>
-        </div>
+
 
 
  <div class="btn-blocs">
@@ -37,8 +46,8 @@
 
 
  <div class="d-flex justify-content-between">
-<div class="link-deco"> <%= link_to "Reply", new_theme_comment_path(@theme) %> </div>
-<div class="link-deco"> <%= link_to "Show all", topic_theme_path(reset: true) %> </div>
+<div class="link-deco"> <%= link_to "leave a comment", new_theme_comment_path(@theme) %> </div>
+<div class="link-deco"> <%= link_to "show all", topic_theme_path(reset: true) %> </div>
 </div>
 <br>
 <div> <%= social_share_button_tag(@theme.title) %> </div>
@@ -47,21 +56,30 @@
 
 <% @comments.each do |comment| %>
     <div data-type= '<%= comment.content%>' class="theme-card-show">
+      <div> <%= comment.content%> </div>
+      <br>
       <div class="d-flex justify-content-between">
-      <%= comment.content%>
     <div>by <%= comment.user.username %></div>
     <div><%= comment.date %></div>
      </div>
 
+
+<div>
+    <%= comment.commentupvotes.count %>
     <% if comment.get_commentupvote_of_user(current_user) %>
-      <%= link_to "dislike", commentupvote_path(comment.get_commentupvote_of_user(current_user)), method: :delete %>
-    <% else %>
-      <%= link_to "like", comment_commentupvotes_path(comment), method: :post %>
+      <%= link_to commentupvote_path(comment.get_commentupvote_of_user(current_user)), method: :delete do  %>
+     <i  id="heart-like" class="fas fa-heart"></i>
     <% end %>
 
+    <% else %>
+      <%= link_to comment_commentupvotes_path(comment), method: :post  do %>
+      <i id="heart-like" class="far fa-heart"></i>
+      <% end %>
+    <% end %>
+
+</div>
 
 
-    <p><%= comment.commentupvotes.count %></p>
 
   </div>
 
