--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,6 @@
 
 <div class="index-page-container">
+<h1><%= @topic.category %></h1>
 
    <div class="form-inline d-flex" style="width:100%">
         <%= form_tag topic_articles_path, method: :get do %>
@@ -12,28 +13,28 @@
 
   <div class="index-page-container col-10">
       <div class="articles">
-      <% @articles.each do |article| %>
-        <%= link_to topic_article_path(@topic,article) do  %>
-        <div class="cards-article row">
+        <% @articles.each do |article| %>
+          <%= link_to topic_article_path(@topic,article) do  %>
+          <div class="cards-article row">
 
-              <% if article.image_url.nil? %>
-                <div class="card-category col-6" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= 'https://source.unsplash.com/500x400/?#{article.topic.category}' %>)"></div>
-              <% else %>
-                <div class="card-category col-6" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= url_for (article.image_url) %>)"></div>
-              <% end %>
-            <div class="card-info col-4">
-              <h4 class="m-0 p-1"><%= article.title %></h4>
-              <p class="m-0 p-1"><%= article.date %></p>
+                <% if article.image_url.nil? %>
+                  <div class="card-category col-6" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= 'https://source.unsplash.com/500x400/?#{article.topic.category}' %>)"></div>
+                <% else %>
+                  <div class="card-category col-6" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= url_for (article.image_url) %>)"></div>
+                <% end %>
+              <div class="card-info col-4">
+                <h4 class="m-0 p-1"><%= article.title %></h4>
+                <p class="m-0 p-1"><%= article.date %></p>
+              </div>
             </div>
-          </div>
+          <% end %>
         <% end %>
-      <% end %>
-    </div>
+      </div>
     <div class="container">
       <div class="row">
         <%= paginate @articles %>
       </div>
     </div>
   </div>
-</div>  
+</div>
 
