--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -12,18 +12,21 @@
 
     <div class="btn-blocs">
       <div class="d-flex justify-content-between">
-        <div class="row">
-      <%= link_to "Show all threads", topic_themes_path(reset: true), class: "btn btn-outline-secondary" %>
-      <%= link_to "Most liked", topic_themes_path(filter: 'likes'), class: "btn btn-outline-secondary" %>
-      <%= link_to "Most commented", topic_themes_path(filter: 'comments'), class: "btn btn-outline-secondary" %>
-      <%= link_to "Today", topic_themes_path(period: 'today'), class: "btn btn-outline-secondary" %>
-      <%= link_to "This week", topic_themes_path(period: 'week'), class: "btn btn-outline-secondary" %>
-      <%= link_to "This month", topic_themes_path(period: 'month'), class: "btn btn-outline-secondary"%>
-      <%= link_to "This year", topic_themes_path(period: 'year'), class: "btn btn-outline-secondary" %>
-      <!--  <%= link_to "All time", topic_themes_path(period: 'all'), class: "btn btn-outline-secondary" %> -->
+        <div class="row" data-no-turbolink-eval='false'>
+            <%= link_to "Show all threads", topic_themes_path(reset: true),method: :get, class: "btn btn-outline-secondary"%>
+            <%= link_to "Most liked", topic_themes_path(filter: 'likes'),method: :get, id: 'likes', class: "btn btn-outline-secondary"%>
+            <%= link_to "Most commented", topic_themes_path(filter: 'comments'),method: :get, id: 'comments', class: "btn btn-outline-secondary"%>
+            <%= link_to "Today", topic_themes_path(period: 'today'),method: :get, class: "btn btn-outline-secondary"%>
+            <%= link_to "This week", topic_themes_path(period: 'week'),method: :get, class: "btn btn-outline-secondary"%>
+            <%= link_to "This month", topic_themes_path(period: 'month'),method: :get, class: "btn btn-outline-secondary"%>
+            <%= link_to "This year", topic_themes_path(period: 'year'),method: :get, class: "btn btn-outline-secondary"%>
+            <!--  <%#= link_to "All time", topic_themes_path(period: 'all'), class: "btn btn-outline-secondary"%> -->
+        </div>
       </div>
-      </div>
-  </div>
+      <% if session[:filter] || session[:period] %>
+      <div> Filters selected: <%= session[:filter] %> <%= session[:period] %> </div>
+      <% end %>
+    </div>
 
   <div class="link-deco"> <%= link_to "Create a new thread ", new_topic_theme_path %> </div>
 
@@ -65,9 +68,9 @@
   </div> %>
 
 
-
+  <div id="themes">
   <% @themes.each do |theme| %>
-      <div data-type='<%=theme.title%>' class="theme-card">
+      <div id="theme-<%= theme.id %>" data-type='<%=theme.title%>' class="theme-card">
 
           <div><%= theme.title %></div>
           <div class="d-flex justify-content-between">
@@ -117,6 +120,7 @@
 
     </div>
   <% end %>
+  </div>
 
   <div class="d-flex justify-content-between">
     <div class="btn-flat-inv" id="link-color"> <%= link_to " << ", topics_path %> 
