--- a/app/views/comments/dashboard.html.erb
+++ b/app/views/comments/dashboard.html.erb
@@ -3,8 +3,6 @@
     <div> <h3>Hi <%= @current_user.username %>! </h3>
       <div> <h5> Welcome to your profile </h5> </div>
       </div>
-
-
   </div>
 
   <!-- <div class="logo-dash d-flex justify-content-center">
@@ -25,62 +23,89 @@
 
 
 
-
-
-
-
-<h4 class="title-dash">My Bookmarks</h4>
-<div class="card-wraper">
-<div class="card-body">
-  <% @my_bookmarks.each do |bookmark|%>
-      <p><%= bookmark.theme.title %></p>
-      <p> created on <%= bookmark.theme.date %></p>
-
-      <% if bookmark.theme.get_bookmark_of_user(current_user) %>
-      <%= link_to "unbookmark", theme_bookmark_path(bookmark.theme, bookmark.theme.get_bookmark_of_user(current_user)), method: :delete, :query => "dashboard" %>
+<div>
+ <h4 class="title-dash">My Bookmarks</h4>
+  <div class="card-wraper">
+   <div class="card-body">
+    <% @my_bookmarks.each do |bookmark|%>
+     <div class="one-bookmark pt-2 pb-2 pr-0 pl-0">
+      <div class="d-flex justify-content-between">
+      <div><%= bookmark.theme.title %></div>
+      <div> <%= bookmark.theme.date %></div>
+     </div>
+       <div class="link-deco">  <% if bookmark.theme.get_bookmark_of_user(current_user) %>
+         <%= link_to theme_bookmark_path(bookmark.theme, bookmark.theme.get_bookmark_of_user(current_user)), method: :delete, :query => "dashboard" do %>
+         <i  class="fas fa-bookmark"></i>
+         <% end %>
+         <% end %>
+       </div>
+       </div>
     <% end %>
-
-
-    <% end %>
+   </div>
+ </div>
 </div>
+
+
+
+
+<div>
+  <h4 class="title-dash">My threads</h4>
+    <div class="card-wraper">
+      <div class="card-body">
+       <% @my_themes.each do |theme|%>
+        <div class="one-bookmark pt-2 pb-2 pr-0 pl-0">
+             <div class="d-flex justify-content-between">
+         <div><%= theme.title %></div>
+           <div> <%= theme.date %></div>
+           </div>
+           <div class="d-flex justify-content-between">
+            <div class="link-deco" > <%= link_to "Go to threads", topic_themes_path(theme.topic, theme) %></div>
+             <div class="link-deco"> <%= link_to edit_topic_theme_path(theme.topic, theme)  do %>
+                   <i class="far fa-edit"></i>
+                   <% end %>
+                   <%= link_to topic_theme_path(theme.topic, theme),
+                   method: :delete,
+                   data: { confirm: "Are you sure?" } do %>
+                   <i class="far fa-trash-alt"></i>
+                   <% end %>
+                   </div>
+            </div>
+          </div>
+          <% end %>
+         </div>
+    </div>
 </div>
 
 
-<h4 class="title-dash">My threads</h4>
-<div class="card-wraper">
-    <div class="card-body">
-    <% @my_themes.each do |theme|%>
-      <p><%= theme.title %></p>
-      <p> created on <%= theme.date %></p>
-      <%= link_to "Go to threads", topic_themes_path(theme.topic, theme), class: "index-link" %>
-      <%= link_to "Edit", edit_topic_theme_path(theme.topic, theme) %>
-      <%= link_to "Delete",
-
-          topic_theme_path(theme.topic, theme),
-          method: :delete,
-          data: { confirm: "Are you sure?" } %>
 
 
-    <% end %>
+<div>
+  <h4 class="title-dash">My comments</h4>
+    <div class="card-wraper">
+      <div class="card-body">
+       <% @my_comments.each do |comment|%>
+        <div class="one-bookmark pt-2 pb-2 pr-0 pl-0">
+          <div class="d-flex justify-content-between">
+        <div><%= comment.content %></div>
+        <div> <%= comment.date %></div>
+      </div>
+        <div class="d-flex justify-content-between">
+           <div class="link-deco">
+          <%= link_to "Go to comments", topic_theme_path(comment.theme.topic, comment.theme) %>
+        </div>
+          <div class="link-deco"> <%= link_to edit_theme_comment_path(comment.theme, comment) do %>
+              <i class="far fa-edit"></i>
+              <% end %>
+              <%= link_to topic_theme_path(comment.theme.topic, comment.theme),
+              method: :delete, data: { confirm: "Are you sure?" } do %>
+              <i class="far fa-trash-alt"></i>
+              <% end %>
+        </div>
+       </div>
+     <% end %>
+   </div>
   </div>
 </div>
-
-
-
-<h4 class="title-dash">My comments</h4>
-<div class="card-wraper">
-<div class="card-body">
-  <% @my_comments.each do |comment|%>
-    <p><%= comment.content %></p>
-    <p> created on <%= comment.date %></p>
-    <%= link_to "Go to comments", topic_theme_path(comment.theme.topic, comment.theme) %>
-    <%= link_to "Edit", edit_theme_comment_path(comment.theme, comment) %>
-     <%= link_to "Delete",
-        topic_theme_path(comment.theme.topic, comment.theme),
-        method: :delete,
-        data: { confirm: "Are you sure?" } %>
-<% end %>
 </div>
 </div>
 
-</div>
