--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -33,11 +33,16 @@
 
 .links a {
   color:black;
+  text-decoration: none;
 }
 
 .container {
   margin-top: 30px;
   margin-bottom: 30px;
+}
+
+a:hover, a:active, a:visited {
+    text-decoration:none;
 }
 
 h5 {
