--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -8,16 +8,19 @@
     <div class="d-inline-flex p-2">
       <div class=row>
         <% @topics.each do |topic| %>
-        <div class="col-sm-6">
-          <div class="card">
-            <% topicname = topic.category %>
-            <%= image_tag "icons/icon#{topicname}.svg", width: 100, class: "icons" %>
-             <div class="links">
-           <p><%= link_to "#{topic.category}", topic_themes_path(topic) %></p>
+          <div class="col-sm-12">
+
+           <%= link_to topic_themes_path(topic) do %>
+
+                <div class="card">
+                  <% topicname = topic.category %>
+                  <%= topic.category %>
+                  <%= image_tag "icons/icon#{topicname}.svg", width: 100, class: "icons" %>
+                </div>
+
+           <% end %>
           </div>
-        </div>
-       </div>
-    <% end %>
+        <% end %>
         </div>
       </div>
 
