--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,17 +1,22 @@
-<div class="form-inline d-flex" style="width:100%">
-  <%= form_tag users_path, method: :get do %>
-    <%= text_field_tag :query, params[:query], placeholder:"keyword", class: 'search-input pr-0 mr-0', style: "width:50%"%><%= submit_tag 'search', class: 'search-btn'%>
+<div class="container">
+  <div class="d-flex justify-content-between">
+    <div class="form d-flex" style="width:100%">
+      <%= form_tag users_path, method: :get do %>
+        <%= text_field_tag :query, params[:query], placeholder:"keyword", class: 'search-input pr-0 mr-0', style: "width:50%"%>
+        <%= submit_tag 'search', class: 'search-btn'%>
+      <% end %>
+    </div>
+  </div>
+
+    <% @users.each do |user| %>
+    <div style="margin-top:30px; margin-bottom: 30px;">
+      <div> User: <%= user.username %> </div>
+      <div> E-mail: <%= user.email %> </div>
+      <div> Admin: <%= user.admin %> </div>
+      <%= simple_form_for(user) do |f| %>
+          <%= f.input :admin %>
+          <%= f.submit %>
+      <% end %>
+    </div>
   <% end %>
 </div>
-
-<% @users.each do |user| %>
-  <%= user.username %> 
-  <%= user.email %> 
-  <%= user.admin %>
-  <%= simple_form_for(user) do |f| %>
-      <%= f.input :admin %>
-      <%= f.submit %>
-  <% end %>
-<% end %>
-
-
