--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -32,14 +32,28 @@
  <div class="btn-blocs">
     <div class="d-flex justify-content-between">
       <div class="row">
-     <%= link_to "Show all comments", topic_theme_path(reset: true), class: "btn btn-outline-secondary" %>
-     <%= link_to "Most liked", topic_theme_path(filter: 'likes'), class: "btn btn-outline-secondary" %>
-     <%= link_to "Today", topic_theme_path(period: 'today'), class: "btn btn-outline-secondary" %>
-     <%= link_to "This week", topic_theme_path(period: 'week'), class: "btn btn-outline-secondary" %>
-     <%= link_to "This month", topic_theme_path(period: 'month'), class: "btn btn-outline-secondary"%>
-     <%= link_to "This year", topic_theme_path(period: 'year'), class: "btn btn-outline-secondary" %>
-    <!--  <%= link_to "All time", topic_theme_path(period: 'all'), class: "btn btn-outline-secondary" %> -->
+        <%= link_to "Show all comments", topic_theme_path(reset: true), class: "btn btn-outline-secondary" %>
+        <%= link_to "Most liked", topic_theme_path(filter: 'likes'), class: "btn btn-outline-secondary" %>
+        <%#= link_to "Today", topic_theme_path(period: 'today'), class: "btn btn-outline-secondary" %>
+        <%#= link_to "This week", topic_theme_path(period: 'week'), class: "btn btn-outline-secondary" %>
+        <%#= link_to "This month", topic_theme_path(period: 'month'), class: "btn btn-outline-secondary"%>
+        <%#= link_to "This year", topic_theme_path(period: 'year'), class: "btn btn-outline-secondary" %>
+        <%#= link_to "All time", topic_theme_path(period: 'all'), class: "btn btn-outline-secondary" %> 
      </div>
+
+      <div class="dropdown">
+          <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Time
+          </a>
+
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="#"> <%= link_to "Today", topic_theme_path(period: 'today'),method: :get %> </a>
+            <a class="dropdown-item" href="#"> <%= link_to "This week", topic_theme_path(period: 'week'),method: :get %> </a>
+            <a class="dropdown-item" href="#"> <%= link_to "This month", topic_theme_path(period: 'month'),method: :get %> </a>
+            <a class="dropdown-item" href="#"> <%= link_to "This year", topic_theme_path(period: 'year'),method: :get %> </a>
+          </div>
+        </div>
+
     </div>
     <% if session[:filter] || session[:period] %>
       <div> Filters selected: <%= session[:filter] %> <%= session[:period] %> </div>
@@ -49,7 +63,7 @@
 
  <div class="d-flex justify-content-between">
 <div class="link-deco"> <%= link_to "leave a comment", new_theme_comment_path(@theme) %> </div>
-<div class="link-deco"> <%= link_to "show all", topic_theme_path(reset: true) %> </div>
+<div class="link-deco"> <%#= link_to "show all", topic_theme_path(reset: true) %> </div>
 </div>
 <br>
 <div> <%= social_share_button_tag(@theme.title) %> </div>
