search bars and responsiveness for iphone7 themes index, show and new

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -20,3 +20,13 @@
 .navbar-nav .btn {
   margin: 0;
 }
+
+.input-master-search {
+  max-width: 100%;
+  border-radius: 5px;
+
+}
+
+#query {
+  width: 100%;
+}
