--- a/app/views/themes/new.html.erb
+++ b/app/views/themes/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container .col-xs-">
 <div class="container">
   <div class="theme_new">
       <%= simple_form_for([@topic, @theme]) do |f| %>
@@ -7,4 +8,5 @@
       <%= f.submit %>
     <% end %>
   </div>
+ </div>
 </div>
