updated buttons & mobile responsiveness

--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -15,8 +15,8 @@
   border-radius: 4px;
   background-color: #FDDB3A;
   margin-left: 0%;
-  margin-right: 52%;
-  margin-top: 20px;
+  margin-right: 239px;
+  margin-top: 117px;
   margin-bottom: 20px;
     .change a {
     margin-right: 11px;
