--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -47,6 +47,7 @@ p {
 .btn btn-warning {
   background-color: #FDDB3A;
   border-radius: 3px;
+  box-shadow: 0 0 4px rgba(0,0,0,0.2) !important;
 }
 
 .btn-danger-text {
