--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -24,7 +24,7 @@
         <h4><%= @article.date %></h4>
         <p><%= @article.content %></p>
         <%= social_share_button_tag(@article.title) %>
-        <div class="btn-flat-inv"> Go back to <%= link_to @article.topic.category, topic_articles_path %> </div>
+        <div class="btn-flat-inv inline shadow-sm "><%= link_to "Go back", topic_articles_path %> </div>
       </div>
     </div>
   <% end %>
