--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-
+<div class="container .col-xs-">
   <div class="banner" style="background-image: url('https://images.unsplash.com/photo-1556484687-30636164638b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80'); height: 500px; background-size: cover;">
   </div>
       <div class="d-inline-flex p-2"><h4 class="title"><strong>What's Kaabo?</strong></h4>
@@ -14,7 +14,7 @@
         </div>
           <h4 class="forum"><strong>Kaabo Forum</strong></h4>
           <p>Visit the Forum or join the Community. Search and share information, find support and make friends!</p>
-          <%= link_to "Enter", topics_path, class: "btn btn-warning btn-danger-text" %>
+          <%= link_to "Enter", topics_path, class: "btn btn-warning btn-danger-text shadow-sm" %>
       </div>
       <div class="d-inline-flex p-2" id="info"><h4 class="title"><strong>Useful Information</strong></h4>
       </div>
@@ -46,7 +46,7 @@
       <h5 class="highlights">RESIDENCE</h5>
       <P class="highlights">Due to Covid-19 social restrictions, applying to residence authorization became less beaurocratic. Check all the new regulations.</P>
     </div>
-
+</div>
 
 
 
