--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,45 +1,43 @@
+<div class="container .col-xs-">
+  <div class="index-page-container .col-xs-">
+    <h2 id="article-title"><%= @topic.category %></h2>
 
-<div class="index-page-container .col-xs-">
-<h2 id="article-title"><%= @topic.category %></h2>
+       <div class="form-inline d-flex ml-4" style="width:100%">
+            <%= form_tag topic_articles_path, method: :get do %>
+            <%= text_field_tag :query, params[:query], placeholder:"keyword", class: 'search-input pr-0 mr-0', style: "width:50%"%><%= submit_tag 'search'%>
+            <% end %>
+       </div> </br>
 
-   <div class="form-inline d-flex ml-4" style="width:100%">
-        <%= form_tag topic_articles_path, method: :get do %>
-        <%= text_field_tag :query, params[:query], placeholder:"keyword", class: 'search-input pr-0 mr-0', style: "width:50%"%><%= submit_tag 'search'%>
-        <% end %>
-   </div> </br>
+      <% if !current_user.nil? %>
+      <%= link_to "Create a new article", new_topic_article_path, class: "article-link"%>
+      <% end %>
+    <div class="index-page-container col-10">
+        <div class="articles">
+          <% @articles.each do |article| %>
+            <%= link_to topic_article_path(@topic,article) do  %>
+            <div class="cards-article row">
 
-  <% if !current_user.nil? %>
-  <%= link_to "Create a new article", new_topic_article_path, class: "article-link"%>
-  <% end %>
-
-
-  <div class="index-page-container col-10">
-      <div class="articles">
-        <% @articles.each do |article| %>
-          <%= link_to topic_article_path(@topic,article) do  %>
-          <div class="cards-article row">
-
-                <% if article.image_url.nil? %>
-                  <div class="card-category col-6" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2), url(<%= 'https://source.unsplash.com/500x400/?#{article.topic.category}' %>)"></div>
-                <% else %>
-                  <div class="card-category col-6" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(<%= url_for (article.image_url) %>)"></div>
-                <% end %>
-              <div class="card-info col-6">
-                <span class="d-inline-block text-truncate" style="max-width: 150px;">
-                  Praeterea iter est quasdam res quas ex communi.
-                </span>
-                <h4 class=" row m-0 p-1"><%= article.title %></h4>
-                <p class="m-0 p-1"><%= article.date %></p>
+                  <% if article.image_url.nil? %>
+                    <div class="card-category col-6" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2), url(<%= 'https://source.unsplash.com/500x400/?#{article.topic.category}' %>)"></div>
+                  <% else %>
+                    <div class="card-category col-6" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(<%= url_for (article.image_url) %>)"></div>
+                  <% end %>
+                <div class="card-info col-6">
+                  <span class="d-inline-block text-truncate" style="max-width: 150px;">
+                    Praeterea iter est quasdam res quas ex communi.
+                  </span>
+                  <h4 class=" row m-0 p-1"><%= article.title %></h4>
+                  <p class="m-0 p-1"><%= article.date %></p>
+                </div>
               </div>
-            </div>
+            <% end %>
           <% end %>
-        <% end %>
-      </div>
-    <div class="container">
-      <div class="row">
-        <%= paginate @articles %>
+        </div>
+      <div class="container">
+        <div class="row">
+          <%= paginate @articles %>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
