--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -4,10 +4,10 @@
 
     <div class="form-inline d-flex">
       <div>
-        <%= form_tag topic_themes_path, method: :get do %> 
+        <%= form_tag topic_themes_path, method: :get do %>
       </div>
       <div class="search-box"> <%= text_field_tag :query, params[:query], placeholder:"keyword", class: 'search-input pr-0 mr-0', style: "width:60%"%>
-        <%= submit_tag 'search', class: 'search-btn'%> 
+        <%= submit_tag 'search', class: 'search-btn'%>
       </div>
         <% end %>
     </div>
@@ -139,12 +139,12 @@
   </div>
 
   <div class="d-flex justify-content-between">
-    <div class="btn-flat-inv" id="link-color"> <%= link_to " << ", topics_path %> 
+    <div class="btn-flat-inv shadow-sm" id="link-color"> <%= link_to " << ", topics_path %>
   </div>
 
 
 
-  
+
   <div>
     <%= paginate @themes %>
   </div>
